--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "moment-range": "^4.0.2",
     "mongoose": "^6.0.12"
   }
 }
